--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,40 @@
 {
-    "name": "sculpin/blog-skeleton",
-    "description": "A Skeleton for a Sculpin Based Blog",
-    "type": "sculpin-skeleton",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Dragonfly Development Inc.",
-            "email": "info@dflydev.com",
-            "homepage": "http://dflydev.com"
-        },
-        {
-            "name": "Beau Simensen",
-            "email": "beau@dflydev.com",
-            "homepage": "http://beausimensen.com"
-        }
-    ],
-    "require": {
-	  "sculpin/sculpin": "^2.1@dev",
-	  "dflydev/embedded-composer": "^1.0@dev",
-      "kriswallsmith/assetic": "1.1.2",
-      "components/bootstrap": "^3.3",
-      "components/jquery": "^3.1",
-      "components/highlightjs": "^9.7"
-    },
-    "config": {
-        "component-dir": "source/components",
-        "components": [
-            "components/bootstrap",
-            "components/jquery",
-            "components/highlightjs"
-        ]
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "ComponentManager\\ComponentManager::postComposerInstall"
-        ]
-    },
-    "autoload": {
-        "classmap": ["component-manager.php"]
+  "name": "Devdelic website",
+  "description": "The website for Devdelic",
+  "type": "project",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Dragan Eror",
+      "email": "draganeror@gmail.com",
+      "homepage": "http://devdelic.com"
     }
+  ],
+  "require": {
+    "sculpin/sculpin": "^2.1@dev",
+    "dflydev/embedded-composer": "^1.0@dev",
+    "kriswallsmith/assetic": "1.1.2",
+    "components/bootstrap": "^3.3",
+    "components/jquery": "^3.1",
+    "components/highlightjs": "^9.7"
+  },
+  "config": {
+    "component-dir": "source/components",
+    "components": [
+      "components/bootstrap",
+      "components/jquery",
+      "components/highlightjs"
+    ]
+  },
+  "scripts": {
+    "build:sculpin": "vendor/bin/sculpin generate",
+    "post-install-cmd": [
+      "ComponentManager\\ComponentManager::postComposerInstall"
+    ]
+  },
+  "autoload": {
+    "classmap": [
+      "component-manager.php"
+    ]
+  }
 }
